--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,8 +17,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(":react-native")  // From node_modules
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile project(':react-native-system-notification')
+    compile "com.facebook.react:react-native:+"
 }
